RESOLVED FIXED 105334
Input elements with default touch handlers don't update handler counts when changing documents
https://bugs.webkit.org/show_bug.cgi?id=105334
Summary Input elements with default touch handlers don't update handler counts when c...
Levi Weintraub
Reported 2012-12-18 12:03:56 PST
We handled one case in updateType, but not in didMoveToNewDocument.
Attachments
Patch (6.31 KB, patch)
2012-12-18 12:12 PST, Levi Weintraub
jamesr: review+
webkit-ews: commit-queue-
Patch (7.39 KB, patch)
2012-12-18 12:24 PST, Levi Weintraub
jamesr: review+
webkit.review.bot: commit-queue-
Levi Weintraub
Comment 1 2012-12-18 12:12:39 PST
Created attachment 179997 [details] Patch Fixes the bug.
Early Warning System Bot
Comment 2 2012-12-18 12:18:07 PST
Early Warning System Bot
Comment 3 2012-12-18 12:18:24 PST
Levi Weintraub
Comment 4 2012-12-18 12:24:53 PST
Created attachment 180002 [details] Patch Changing the guards on didRemoveTouchEventTargetNode.
WebKit Review Bot
Comment 5 2012-12-18 17:29:31 PST
Comment on attachment 180002 [details] Patch Attachment 180002 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15413342 New failing tests: fast/events/touch/touch-input-element-change-documents.html
Levi Weintraub
Comment 6 2012-12-18 18:05:08 PST
János Badics
Comment 7 2012-12-19 02:09:26 PST
The test you have added in r138095 and corrected in r138115 still fails on Qt and EFL. I have added detailed information about the fails at https://bugs.webkit.org/show_bug.cgi?id=105406. Could you have a look at it please? I will skip this test on Qt until the proper fix. Please unskip it afterwards.
János Badics
Comment 8 2012-12-19 02:32:40 PST
fast/events/touch/touch-input-element-change-documents.html has been skipped in r138134. Please unskip with the proper fix.
Note You need to log in before you can comment on or make changes to this bug.