Source/WebCore/dom/Document.cpp
@@ -5654,7 +5654,7 @@ void Document::didRemoveTouchEventHandler(Node* handler)
 #endif
 }
 
-#if ENABLE(TOUCH_EVENT_TRACKING)
+#if ENABLE(TOUCH_EVENTS)
 void Document::didRemoveEventTargetNode(Node* handler)
 {
     if (m_touchEventTargets.get())
